--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,8 +1,14 @@
-<h1><%= @song.name %></h1>
-<h2><%= link_to @song.artist.name, @song.artist %></h2>
-<ul>
-<% @song.genres.each do |genre| %>
-<li><%= link_to genre.name, genre %></li>
-<% end  %>
-</ul>
-<h4>Click <%=link_to "here", edit_song_path%> to edit song info.</h4>
+<%if @song%>
+  <h1><%= @song.name %></h1>
+  <h2><%= link_to @song.artist.name, @song.artist %></h2>
+  <ul>
+  <% @song.genres.each do |genre| %>
+  <li><%= link_to genre.name, genre %></li>
+  <% end  %>
+  </ul>
+  <h4>Click <%=link_to "here", edit_song_path%> to edit song info.</h4>
+  <h4>Click <%=link_to "here", @song, :method=> :delete%> to delete song.</h4>
+
+<%else%>
+  <h4>Song not found.  Click <%=link_to "here", songs_path%> to see all the songs.</h4>
+<%end%>
