--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,5 +4,5 @@
 <h2>To see all the songs, click <%=link_to "here", songs_path%></h2>
 <h2>To see all the artists, click <%=link_to "here", artists_path%></h2>
 <h2>To add an artist, click <%=link_to "here", new_artist_path%></h2>
-<h2>To add an genre, click <%=link_to "here", new_genre_path%></h2>
+<h2>To add a genre, click <%=link_to "here", new_genre_path%></h2>
 <h2>To see all the genres, click <%=link_to "here", genres_path%></h2>
