--- a/app/views/genres/show.html.erb
+++ b/app/views/genres/show.html.erb
@@ -14,6 +14,8 @@
     <li><%= link_to artist.name, artist %></li>
     <% end %>
   </ul>
+  <h4>Click <%=link_to "here", edit_genre_path%> to edit genre info.</h4>
+
   <h4>Click <%=link_to "here", @genre, :method=> :delete%> to delete genre.</h4>
 <%else%>
   <h4>Genre not found.  Click <%=link_to "here", genres_path%> to see all the genres.</h4>
